# smart-pdf-toolkit

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_STRATEGY.md  CONTRIBUTING.md  DEBUG_GUIDE.md  DEPLOYMENT.md  Dockerfile  LOCAL_SETUP.md  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  debug_merge.py  docker-compose.yml  example_usage.py  fix_syntax_errors.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_logging.py  test_merge_simple.py  verify_implementation.py
.github/workflows/: build-and-release.yml  security-stress-tests.yml
.kiro/specs/smart-pdf-toolkit/: design.md  requirements.md  tasks.md
aws/: deploy.sh
deployment/aws/: cloudformation-template.yaml  ecs-task-definition.json
deployment/scripts/: local-test.py
docs/user-guide/: QUICKSTART.md  README.md
examples/cli/: basic_usage.py
examples/integration/: workflow_example.py
scripts/: deploy-windows.ps1
smart_pdf_toolkit/: __init__.py
smart_pdf_toolkit/api/: __init__.py  auth.py  main.py  middleware.py  services.py
smart_pdf_toolkit/api/routes/: __init__.py  ai_services.py  batch_processing.py  content_extraction.py  format_conversion.py  health.py  optimization.py  pdf_operations.py
smart_pdf_toolkit/cli/: __init__.py  completion.py  main.py  utils.py
smart_pdf_toolkit/cli/commands/: ai_commands.py  content_commands.py  pdf_commands.py
smart_pdf_toolkit/core/: ai_services.py  batch_processor.py  config.py  content_extractor.py  format_converter.py  interfaces.py  pdf_document.py  pdf_operations.py
smart_pdf_toolkit/gui/: __init__.py  batch_processing_dialog.py  format_conversion_tab.py  main_window.py  operation_tabs.py  settings_dialog.py
smart_pdf_toolkit/plugins/: api.py  base.py  dependency.py
smart_pdf_toolkit/plugins/builtin/: __init__.py
smart_pdf_toolkit/utils/: __init__.py
src/smart_pdf_toolkit/: __main__.py  updater.py
src/smart_pdf_toolkit/api/: config.py  exceptions.py  main.py  middleware.py  models.py
src/smart_pdf_toolkit/api/routes/: auth.py  batch_processing.py  pdf_operations.py  security.py
src/smart_pdf_toolkit/cli/: __init__.py  config.py
src/smart_pdf_toolkit/cli/commands/: __init__.py  batch_commands.py
src/smart_pdf_toolkit/core/: __init__.py  ai_services.py  config.py  exceptions.py  format_converter.py  interfaces.py  ocr_processor.py  optimization_engine.py  pdf_operations.py  security_manager.py
src/smart_pdf_toolkit/gui/: __init__.py  about_dialog.py  ai_services_tab.py  app.py  file_browser.py  main_window.py  operation_tabs.py  plugins_dialog.py  progress_dialog.py  security_optimization_tab.py
src/smart_pdf_toolkit/plugins/: __init__.py  manager.py
src/smart_pdf_toolkit/plugins/builtin/: example_processor.py
src/smart_pdf_toolkit/utils/: file_utils.py  logging_utils.py  validation.py
src/smart_pdf_toolkit/web/: __init__.py
tests/: __init__.py  test_ai_services.py  test_ai_services_advanced.py  test_api.py  test_batch_processor.py  test_batch_processor_advanced.py  test_cli.py  test_completed_features.py  test_config.py  test_content_extractor.py  test_content_extractor_integration.py  test_format_converter_integration.py  test_gui.py  test_integration.py  test_interfaces.py  test_minimal_converter.py  test_ocr_processor.py  test_optimization_engine_advanced.py  test_pdf_document.py  test_pdf_document_integration.py  test_pdf_operations.py  test_pdf_operations_integration.py  test_task_3_2_verification.py  test_task_5_2_verification.py
tests/integration/: test_api_auth.py  test_cli_integration.py  test_format_converter_office_integration.py
tests/performance/: test_security_manager_advanced.py
tests/performance/stress/: __init__.py
tests/security/: README.md  __init__.py  comprehensive_security_framework.py  comprehensive_test_runner.py  fixtures.py  run_security_tests.py  security_fixtures.py  security_test_config.yaml  stress_testing_framework.py  test_advanced_malicious_pdf_handling.py  test_advanced_stress.py  test_advanced_stress_framework.py  test_api_security.py  test_automated_security_scanner.py  test_automated_security_scanning.py  test_comprehensive_security_framework.py  test_comprehensive_stress_framework.py  test_comprehensive_suite.py  test_extreme_stress.py  test_input_validation.py  test_malicious_pdf_handling.py  test_password_security.py  test_security_comprehensive.py  test_security_orchestrator.py  test_security_test_orchestrator.py  test_stress_testing.py
tests/unit/: test_format_converter.py  test_format_converter_simple.py  test_minimal_converter.py  test_optimization_engine.py  test_plugin_system.py  test_security_manager.py
